.k8s/storage/cephfs-smb-export.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app: cephfs-smb-export
    kubenix/hash: b7a0a7cbced47e594d9df3addad7c9660e82bfa1
  name: cephfs-smb-export
  namespace: rook-ceph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cephfs-smb-export
  template:
    metadata:
      labels:
        app: cephfs-smb-export
    spec:
      containers:
        - env:
            - name: TZ
              value: America/Sao_Paulo
            - name: SAMBA_LOG_LEVEL
              value: "0"
          image: ghcr.io/crazy-max/samba:4.21.4
          imagePullPolicy: IfNotPresent
          name: samba
          ports:
            - containerPort: 445
              name: smb
              protocol: TCP
          volumeMounts:
            - mountPath: /data/config.yml
              name: config
              subPath: config.yml
            - mountPath: /samba/share
              name: share
      volumes:
        - configMap:
            name: cephfs-smb-export-config
          name: config
        - name: share
          persistentVolumeClaim:
            claimName: cephfs-shared-storage
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.149
    lbipam.cilium.io/sharing-key: smb
  labels:
    app: cephfs-smb-export
    kubenix/hash: b7a0a7cbced47e594d9df3addad7c9660e82bfa1
  name: cephfs-smb-export
  namespace: rook-ceph
spec:
  ports:
    - name: smb
      port: 445
      protocol: TCP
      targetPort: 445
  selector:
    app: cephfs-smb-export
  type: LoadBalancer
