.k8s/storage/rook-ceph-cluster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app: rook-ceph-tools
    kubenix/hash: 23b05a8bf3c7ee3fa765e5409e0fe3e11c693aab
  name: rook-ceph-tools
  namespace: rook-ceph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rook-ceph-tools
  template:
    metadata:
      labels:
        app: rook-ceph-tools
    spec:
      containers:
        - command:
            - /bin/bash
            - -c
            - |
              [...]
          image: quay.io/ceph/ceph:v19.2.4
          imagePullPolicy: IfNotPresent
          name: rook-ceph-tools
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsGroup: 2016
            runAsNonRoot: true
            runAsUser: 2016
          tty: true
          volumeMounts:
            - mountPath: /etc/ceph
              name: ceph-config
            - mountPath: /etc/rook
              name: mon-endpoint-volume
            - mountPath: /var/lib/rook-ceph-mon
              name: ceph-admin-secret
            - mountPath: /etc/rook-config-override
              name: rook-config-override
              readOnly: true
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      serviceAccountName: rook-ceph-default
      tolerations:
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 5
      volumes:
        - name: ceph-admin-secret
          secret:
            items:
              - key: ceph-secret
                path: secret.keyring
            optional: false
            secretName: rook-ceph-mon
        - configMap:
            items:
              - key: data
                path: mon-endpoints
            name: rook-ceph-mon-endpoints
          name: mon-endpoint-volume
        - configMap:
            name: rook-config-override
            optional: true
          name: rook-config-override
        - emptyDir: {}
          name: ceph-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    kubenix/hash: 23b05a8bf3c7ee3fa765e5409e0fe3e11c693aab
  name: ceph-objectstore
  namespace: rook-ceph
spec:
  ingressClassName: cilium
  rules:
    - host: objectstore.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: rook-ceph-rgw-ceph-objectstore
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - objectstore.josevictor.me
      secretName: wildcard-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    kubenix/hash: 23b05a8bf3c7ee3fa765e5409e0fe3e11c693aab
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  ingressClassName: cilium
  rules:
    - host: ceph.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: http-dashboard
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ceph.josevictor.me
      secretName: wildcard-tls
